# android-alize

./: .gitignore  AlizeConfigurationExample.cfg  README.md  build.gradle  settings.gradle
alize/: CMakeLists.txt  build.gradle  proguard-rules.pro
alize/src/main/: AndroidManifest.xml
alize/src/main/cpp/: AlizeSpkRec_AlizeException.cpp  AlizeSpkRec_AlizeException.h  AlizeSpkRec_SimpleSpkDetSystem.cpp  AlizeSpkRec_SimpleSpkDetSystem.h
alize/src/main/java/AlizeSpkRec/: AlizeException.java  ConfigCheckException.java  IdAlreadyExistsException.java  InvalidDataException.java  OutOfMemoryException.java  ParamNotFoundInConfigException.java  SimpleSpkDetSystem.java
alize/src/main/res/values/: strings.xml
alize/src/test/java/AlizeSpkRec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
